--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="about" class="section">
       <h2>About</h2>
       <p>
-        I’m Wael Shahadeh — junior at Marist University pursuing a B.S. in Cybersecurity with minors in IS, IT,
+        I’m Wael Shahadeh, a junior at Marist University pursuing a B.S. in Cybersecurity with minors in IS, IT,
         and Criminal Justice. I’m hands-on with malware analysis, network traffic, and building secure lab
         environments. I also serve as a Resident Assistant and advisor, turning complex topics into approachable,
         engaging programs for students.
@@ -58,6 +58,7 @@
         <li>Wireshark</li>
         <li>Python</li>
         <li>Git</li>
+        <li>Metasploit</li>
         <li>VirtualBox</li>
       </ul>
     </section>
@@ -75,13 +76,13 @@
 
         <article class="card">
           <h3>PC Repair & OS Re-imaging Internship</h3>
-          <p>Diagnosed, repaired, and re-imaged PCs for donation under an IT mentor — practical triage + imaging.</p>
+          <p>Diagnosed, repaired, and re-imaged PCs for donation — practical triage + imaging.</p>
           <div class="tags"><span>Imaging</span><span>Deployment</span><span>Support</span></div>
         </article>
 
         <article class="card">
-          <h3>RA Security Programming</h3>
-          <p>Designed approachable security workshops & materials (threat models, phishing drills, safe computing).</p>
+          <h3>RA Programming</h3>
+          <p>Organize and host events that foster connection, cultural awareness, and student wellness for the building of an inclusive community.</p>
           <div class="tags"><span>Education</span><span>Security</span><span>Leadership</span></div>
         </article>
       </div>
@@ -90,9 +91,9 @@
     <!-- Contact -->
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>Open to internships, research collabs, and security projects.</p>
+      <p>Open to careers, internships, research collabs, and security projects.</p>
       <div class="cta-row">
-        <a class="btn-primary" href="mailto:waelshahadeh@gmail.com">Email Me</a>
+        <a class="btn-primary" href="mailto:shahadehwael@gmail.com">Email Me</a>
         <a class="btn-ghost" href="Wael_Shahadeh_Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
       </div>
     </section>
