--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <header class="nav">
     <div class="brand">
-      <span class="dot"></span>
-      <span class="logo-text">wael<span class="accent">.systems</span></span>
+        <span class="dot"></span>
+        <span id="brandText" class="logo-text">wael<span class="accent">.sh</span></span>
     </div>
     <nav>
       <a href="#about">About</a>
