made the branding dynamic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <header class="nav">
     <div class="brand">
         <span class="dot"></span>
-        <span id="brandText" class="logo-text">wael<span class="accent">.sh</span></span>
+        <span id="brandText" class="logo-text"></span>
+        <span class="brand-cursor">▌</span>
     </div>
     <nav>
       <a href="#about">About</a>
