added the resume

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
       <p>Open to careers, internships, research collabs, and security projects.</p>
       <div class="cta-row">
         <a class="btn-primary" href="mailto:shahadehwael@gmail.com">Email Me</a>
-        <a class="btn-ghost" href="Wael_Shahadeh_Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+        <a class="btn-primary" href="resume\index.html">Resume</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© <span id="year"></span> Wael Shahadeh — <span class="accent">stay curious, stay secure</span></p>
+    <p><span id="year"></span> Wael Shahadeh — <span class="tagline flicker">stay curious, keep plotting</span></p>
   </footer>
 
   <script src="script.js"></script>
